tests/snapshots/snapshot_tests__array_copy_nondet_add.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_copy_nondet_add.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 j+0) i+0) j+0)",
        "(= (Read_Int_Int (Write_Int_Int b+0 0 114443) 0) 114443)",
        "(= (Read_Int_Int (Write_Int_Int b+0 1 87856) 1) 87856)",
        "(= (Read_Int_Int (Write_Int_Int b+0 Z 3) Z) 3)",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (+ (Read_Int_Int a+0 i+0) j+0)) i+0) (+ (Read_Int_Int a+0 i+0) j+0))",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 133513) i+0) 133513)",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+5 92279) i+5) 92279)",
        "(= (Read_Int_Int (Write_Int_Int c+0 i+0 (+ (Read_Int_Int b+0 i+0) j+0)) i+0) (+ (Read_Int_Int b+0 i+0) j+0))",
        "(= (Read_Int_Int (Write_Int_Int c+2 1 (+ Z j+0)) 1) (+ Z j+0))",
        "(=> (not (= 0 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 j+0) 0) (Read_Int_Int a+0 0)))",
        "(=> (not (= 0 i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (+ (Read_Int_Int a+0 i+0) j+0)) 0) (Read_Int_Int b+0 0)))",
        "(=> (not (= N i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 j+0) N) (Read_Int_Int a+0 N)))",
        "(=> (not (= N i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (+ (Read_Int_Int a+0 i+0) j+0)) N) (Read_Int_Int b+0 N)))",
        "(=> (not (= Z 0)) (= (Read_Int_Int (Write_Int_Int b+0 0 3) Z) (Read_Int_Int b+0 Z)))",
        "(=> (not (= Z N)) (= (Read_Int_Int (Write_Int_Int c+0 N 3) Z) (Read_Int_Int c+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 j+0) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (+ (Read_Int_Int a+0 i+0) j+0)) Z) (Read_Int_Int b+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int c+0 i+0 (+ (Read_Int_Int b+0 i+0) j+0)) Z) (Read_Int_Int c+0 Z)))",
        "(=> (not (= i+2 i+0)) (= (Read_Int_Int (Write_Int_Int c+0 i+0 (+ (Read_Int_Int b+0 i+0) j+0)) i+2) (Read_Int_Int c+0 i+2)))",
        "(=> (not (= i+7 i+0)) (= (Read_Int_Int (Write_Int_Int c+0 i+0 (+ (Read_Int_Int b+0 i+0) j+0)) i+7) (Read_Int_Int c+0 i+7)))",
    ],
}
