tests/snapshots/snapshot_tests__array_doub_access_init.snap
---
source: tests/snapshot_tests.rs
assertion_line: 753
expression: run_benchmark (& path)
---
BenchmarkResult {
    example_name: "examples/array/array_doub_access_init.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+0 (* 2 i+0) 0) (+ (* 2 i+0) 1) 0) (+ (* 2 i+0) 1)) 0)",
        "(= (Read_Int_Int (Write_Int_Int a+0 (* 2 i+0) 0) (* 2 i+0)) 0)",
        "(=> (not (= N (* 2 i+0))) (= (Read_Int_Int (Write_Int_Int a+0 (* 2 i+0) 0) N) (Read_Int_Int a+0 N)))",
        "(=> (not (= N (+ (* 2 i+0) 1))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+0 (* 2 i+0) 0) (+ (* 2 i+0) 1) 0) N) (Read_Int_Int (Write_Int_Int a+0 (* 2 i+0) 0) N)))",
        "(=> (not (= Z (* 2 i+0))) (= (Read_Int_Int (Write_Int_Int a+0 (* 2 i+0) 0) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z (+ (* 2 i+0) 1))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+0 (* 2 i+0) 0) (+ (* 2 i+0) 1) 0) Z) (Read_Int_Int (Write_Int_Int a+0 (* 2 i+0) 0) Z)))",
    ],
}
