tests/snapshots/snapshot_tests__array_doub_access_init_const.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_doub_access_init_const.vmt",
    status: Timeout,
    used_instantiations: [],
}
