tests/snapshots/snapshot_tests__array_double_inverse.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_double_inverse.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int b+0 Z 8) Z) 8)",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 (- N (+ i+0 1)))) i+0) (Read_Int_Int a+0 (- N (+ i+0 1))))",
        "(= (Read_Int_Int (Write_Int_Int c+0 i+0 (Read_Int_Int b+0 (- N (+ i+0 1)))) i+0) (Read_Int_Int b+0 (- N (+ i+0 1))))",
        "(=> (not (= (- N (+ i+1 1)) N)) (= (Read_Int_Int (Write_Int_Int c+0 N 5) (- N (+ i+1 1))) (Read_Int_Int c+0 (- N (+ i+1 1)))))",
        "(=> (not (= (- N (+ i+1 1)) i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 (- N (+ i+0 1)))) (- N (+ i+1 1))) (Read_Int_Int b+0 (- N (+ i+1 1)))))",
        "(=> (not (= (- N (+ i+2 1)) i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 (- N (+ i+0 1)))) (- N (+ i+2 1))) (Read_Int_Int b+0 (- N (+ i+2 1)))))",
        "(=> (not (= (- N (+ i+3 1)) i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 (- N (+ i+0 1)))) (- N (+ i+3 1))) (Read_Int_Int b+0 (- N (+ i+3 1)))))",
        "(=> (not (= 0 i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 (- N (+ i+0 1)))) 0) (Read_Int_Int b+0 0)))",
        "(=> (not (= 1 i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 (- N (+ i+0 1)))) 1) (Read_Int_Int b+0 1)))",
        "(=> (not (= Z N)) (= (Read_Int_Int (Write_Int_Int c+0 N 5) Z) (Read_Int_Int c+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 (- N (+ i+0 1)))) Z) (Read_Int_Int b+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int c+0 i+0 (Read_Int_Int b+0 (- N (+ i+0 1)))) Z) (Read_Int_Int c+0 Z)))",
        "(=> (not (= i+1 i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 (- N (+ i+0 1)))) i+1) (Read_Int_Int b+0 i+1)))",
    ],
}
