tests/snapshots/snapshot_tests__array_equiv_1.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark (& path)
---
BenchmarkResult {
    example_name: "examples/array/array_equiv_1.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 1 45756) 1) 45756)",
        "(= (Read_Int_Int (Write_Int_Int a+0 Z i+0) Z) i+0)",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ 1 (Read_Int_Int a+0 (- i+0 1)))) i+0) (+ 1 (Read_Int_Int a+0 (- i+0 1))))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 c+0) i+0) c+0)",
        "(= (Read_Int_Int (Write_Int_Int a+1 Z (+ i+0 c+0)) Z) (+ i+0 c+0))",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (+ i+0 c+0)) i+0) (+ i+0 c+0))",
        "(=> (not (= (- i+0 1) i+1)) (= (Read_Int_Int (Write_Int_Int a+1 i+1 (+ 1 (Read_Int_Int a+1 (- i+1 1)))) (- i+0 1)) (Read_Int_Int a+1 (- i+0 1))))",
        "(=> (not (= 0 1)) (= (Read_Int_Int (Write_Int_Int a+0 1 45756) 0) (Read_Int_Int a+0 0)))",
        "(=> (not (= Z 1)) (= (Read_Int_Int (Write_Int_Int a+0 1 45756) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ 1 (Read_Int_Int a+0 (- i+0 1)))) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (+ i+0 c+0)) Z) (Read_Int_Int b+0 Z)))",
        "(=> (not (= Z i+3)) (= (Read_Int_Int (Write_Int_Int b+0 i+3 (+ i+1 c+1)) Z) (Read_Int_Int b+0 Z)))",
    ],
}
