tests/snapshots/snapshot_tests__array_equiv_2.snap
---
source: tests/snapshot_tests.rs
assertion_line: 753
expression: run_benchmark (& path)
---
BenchmarkResult {
    example_name: "examples/array/array_equiv_2.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ c+0 (Read_Int_Int a+0 (- i+0 1)))) i+0) (+ c+0 (Read_Int_Int a+0 (- i+0 1))))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 0) i+0) 0)",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (* i+0 c+0)) i+0) (* i+0 c+0))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ c+0 (Read_Int_Int a+0 (- i+0 1)))) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 0) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (* i+0 c+0)) Z) (Read_Int_Int b+0 Z)))",
    ],
}
