tests/snapshots/snapshot_tests__array_equiv_3.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_equiv_3.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 c+0) i+0) c+0)",
        "(=> (not (= (- i+0 3) i+1)) (= (Read_Int_Int (Write_Int_Int a+1 i+1 c+1) (- i+0 3)) (Read_Int_Int a+1 (- i+0 3))))",
        "(=> (not (= (- i+1 3) i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (Read_Int_Int a+0 (- i+0 3))) (- i+1 3)) (Read_Int_Int a+0 (- i+1 3))))",
        "(=> (not (= (- i+1 3) i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 c+0) (- i+1 3)) (Read_Int_Int a+0 (- i+1 3))))",
        "(=> (not (= (- i+2 3) i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 c+0) (- i+2 3)) (Read_Int_Int a+0 (- i+2 3))))",
        "(=> (not (= (- i+3 3) i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 c+0) (- i+3 3)) (Read_Int_Int a+0 (- i+3 3))))",
        "(=> (not (= Z 1)) (= (Read_Int_Int (Write_Int_Int a+0 1 i+0) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 c+0) Z) (Read_Int_Int a+0 Z)))",
    ],
}
